# scikit-sound

./: CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  desktop.ini  pyproject.toml  setup.py  sksound.wpr  sksound.wpu
docs/: FAQ.txt  Makefile  conf.py  index.rst  sounds.rst
docs/_build/doctrees/: environment.pickle  index.doctree  misc.doctree  sounds.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  misc.html  objects.inv  py-modindex.html  search.html  searchindex.js  sounds.html
docs/_build/html/_modules/: index.html  misc.html  sounds.html
docs/_build/html/_sources/: index.rst.txt  misc.rst.txt
docs/_build/html/_static/: classic.css
images/: scikit_sound.ai
scikit_sound.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sksound/: __init__.py  desktop.ini  misc.py  sounds.py
sksound/tests/: test_sksound.py  test_sound.py
