[tool.poetry]
name = "scikit-sound"
version = "0.3.1"
description  = "Python utilites for working with sound signals"
authors = ["Thomas Haslwanter <thomas.haslwanter@fh-ooe.at>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "http://work.thaslwanter.at/sksound/html"
repository = "https://github.com/thomas-haslwanter/scikit-sound"
keywords = ["sound", "auditory signals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
]
packages = [
    {include = "sksound" },
    {include = "tests" },
]

[tool.poetry.dependencies]
python = ">=3.9"
docutils = ">= 0.3"
numpy = ">= 1.13.0"
appdirs = ">= 1.4.3"
pyyaml = ">= 5.3.1"
scipy = ">= 1.5"
pygame = [
        { platform = "linux", version = ">= 2.0"},
    ]

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "postry.core.masonry.api"
